--- a/R/NAMESPACE
+++ b/R/NAMESPACE
@@ -6,6 +6,7 @@ export(add_vertices)
 export(create_graph)
 export(delete_all_graphs)
 export(delete_graph)
+export(is_directed)
 export(local_average)
 importFrom(Rcpp,evalCpp)
 useDynLib(chickenwire)
