R Package uses vectorised code

--- a/R/NAMESPACE
+++ b/R/NAMESPACE
@@ -6,7 +6,9 @@ export(add_vertices)
 export(create_graph)
 export(delete_all_graphs)
 export(delete_graph)
+export(edges)
 export(is_directed)
 export(local_average)
+export(vertices)
 importFrom(Rcpp,evalCpp)
 useDynLib(chickenwire)
