--- a/R/Makefile
+++ b/R/Makefile
@@ -1,11 +1,14 @@
-.PHONY: copy_lib document
+.PHONY: copy_lib document clean
 
-chickenwire_headers=graph.h random_walk.h vertex.h edge.h stepper.h chunker.h filter_edges.h types.h shortest_path.h
-chickenwire_source=random_walk_categorical.cpp random_walk_continuous.cpp filter_edges.cpp shortest_path.cpp
+lib_headers= $(notdir $(wildcard ../include/*.h))
+lib_source= $(notdir $(wildcard ../src/*.cpp))
 
-copy_lib: $(addprefix src/, $(chickenwire_headers)) $(addprefix, src/$(chickenwire_source))
-	cp $(addprefix ../include/, $(chickenwire_headers)) src/
-	cp $(addprefix ../src/, $(chickenwire_source)) src/
+copy_lib: $(addprefix ../include/, $(lib_headers)) $(addprefix, include/, $(lib_source))
+	cp $(addprefix ../include/, $(lib_headers)) src/
+	cp $(addprefix ../src/, $(lib_source)) src/
+
+clean:
+	rm -f $(addprefix src/, $(lib_headers)) $(addprefix src/, $(lib_source)) 
 
 document:
 	Rscript  -e "roxygen2::roxygenise()"
