--- a/R/.gitignore
+++ b/R/.gitignore
@@ -3,8 +3,7 @@ src/*.so
 src/chunker.h
 src/csv.h
 src/edge.h
-src/filter_edges.h
-src/functions.h
+src/filter_layer.h
 src/graph.h
 src/random_graph.h
 src/random_walk.h
@@ -13,7 +12,16 @@ src/stepper.h
 src/types.h
 src/vertex.h
 src/shortest_path.h
+src/shortest_path.cpp
 src/RcppExports.cpp
-src/filter_edges.cpp
-src/random_walk_categorical.cpp
-src/random_walk_continuous.cpp
+src/filter_layer.cpp
+src/random_walk.cpp
+src/degree_distribution.h
+src/degree_distribution.cpp
+src/weigh_edges.h
+src/weigh_edges.cpp
+src/connected_components.cpp
+src/connected_components.h
+
+*.tar.gz
+*.Rcheck
