--- a/R/NAMESPACE
+++ b/R/NAMESPACE
@@ -9,6 +9,8 @@ export(delete_graph)
 export(edges)
 export(is_directed)
 export(local_average)
+export(nedges)
+export(nvertices)
 export(vertices)
 importFrom(Rcpp,evalCpp)
 useDynLib(chickenwire)
